--- a/1bash.template
+++ b/1bash.template
@@ -112,7 +112,7 @@ v0032="papampi;Version numbering"
 v0033="papampi;ZHASH, PHI1612, PHI2 Algos, Z_EWBF Miner and NICE_X16R"
 v0034="LuKePicci;Rearrange settings and explaination comments"
 v0035="LuKePicci;Uniform plusCPU handling"
-v0036="papampi;Ethminer new arguments, Coin Stratum Schema"
+v0036="papampi;Ethminer new arguments, Coin Pool Protocol"
 
 
 # Do not edit these lines
@@ -650,7 +650,7 @@ ALTCOM_EXTENSION_ARGUMENTS=""
 ALTCOM_POOL="ALTCOM POOL"
 ALTCOM_PORT="ALTCOM PORT"
 ALTCOM_WORKER="$WORKERNAME"
-ALTCOM_STRATUM_SCHEMA="stratum+tcp"
+ALTCOM_POOL_PROTOCOL="stratum+tcp"
 
 # Bitcoin Interest (BCI)
 BCI_ADDRESS="replace_with_your_address"
@@ -658,7 +658,7 @@ BCI_EXTENSION_ARGUMENTS=""
 BCI_POOL="replace_with_your_BCI_POOL"
 BCI_PORT="replace_with_your_BCI_PORT"
 BCI_WORKER="$WORKERNAME"
-BCI_STRATUM_SCHEMA="stratum+tcp"
+BCI_POOL_PROTOCOL="stratum+tcp"
 
 # Bitsend (BSD)
 BSD_ADDRESS="replace_with_your_address"
@@ -666,7 +666,7 @@ BSD_EXTENSION_ARGUMENTS=""
 BSD_POOL="bsd.suprnova.cc"
 BSD_PORT="8686"
 BSD_WORKER="$WORKERNAME"
-BSD_STRATUM_SCHEMA="stratum+tcp"
+BSD_POOL_PROTOCOL="stratum+tcp"
 
 # Bitcoin Private (BTCP)
 BTCP_ADDRESS="replace_with_your_address"
@@ -674,7 +674,7 @@ BTCP_EXTENSION_ARGUMENTS=""
 BTCP_POOL="BTCP_POOL_ADDRESS"
 BTCP_PORT="BTCP_POOL_PORT"
 BTCP_WORKER="$WORKERNAME"
-BTCP_STRATUM_SCHEMA="stratum+tcp"
+BTCP_POOL_PROTOCOL="stratum+tcp"
 
 # Bitcoinz (BTCZ)
 BTCZ_ADDRESS="replace_with_your_address"
@@ -682,7 +682,7 @@ BTCZ_EXTENSION_ARGUMENTS=""
 BTCZ_POOL="btcz.suprnova.cc"
 BTCZ_PORT="5586"
 BTCZ_WORKER="$WORKERNAME"
-BTCZ_STRATUM_SCHEMA="stratum+tcp"
+BTCZ_POOL_PROTOCOL="stratum+tcp"
 
 # Bitcoin Gold (BTG)
 BTG_ADDRESS="replace_with_your_address"
@@ -690,7 +690,7 @@ BTG_EXTENSION_ARGUMENTS="--algo 144_5 --pers BgoldPoW"
 BTG_POOL="us-east.equihash-hub.miningpoolhub.com"
 BTG_PORT="20595"
 BTG_WORKER="$WORKERNAME"
-BTG_STRATUM_SCHEMA="stratum+tcp"
+BTG_POOL_PROTOCOL="stratum+tcp"
 
 # Bitcore (BTX)
 BTX_ADDRESS="replace_with_your_address"
@@ -698,7 +698,7 @@ BTX_EXTENSION_ARGUMENTS=""
 BTX_POOL="btx.suprnova.cc"
 BTX_PORT="3629"
 BTX_WORKER="$WORKERNAME"
-BTX_STRATUM_SCHEMA="stratum+tcp"
+BTX_POOL_PROTOCOL="stratum+tcp"
 
 # Callisto (CLO)
 CLO_ADDRESS="replace_with_your_address"
@@ -706,7 +706,7 @@ CLO_EXTENSION_ARGUMENTS=""
 CLO_POOL="clo.2miners.com"
 CLO_PORT="3030"
 CLO_WORKER="$WORKERNAME"
-CLO_STRATUM_SCHEMA="stratum+tcp"
+CLO_POOL_PROTOCOL="stratum+tcp"
 
 # CrowdCoin (CRC)
 CRC_ADDRESS="replace_with_your_address"
@@ -714,7 +714,7 @@ CRC_EXTENSION_ARGUMENTS=""
 CRC_POOL="replace_with_pool_address"
 CRC_PORT="replace_with_pool_port"
 CRC_WORKER="$WORKERNAME"
-CRC_STRATUM_SCHEMA="stratum+tcp"
+CRC_POOL_PROTOCOL="stratum+tcp"
 
 # Decred (DCR)
 DCR_ADDRESS="replace_with_your_address"
@@ -722,7 +722,7 @@ DCR_EXTENSION_ARGUMENTS=""
 DCR_POOL="yiimp.eu"
 DCR_PORT="3252"
 DCR_WORKER="$WORKERNAME"
-DCR_STRATUM_SCHEMA="stratum+tcp"
+DCR_POOL_PROTOCOL="stratum+tcp"
 
 # Digibyte (DGB)
 DGB_ADDRESS="replace_with_your_address"
@@ -730,7 +730,7 @@ DGB_EXTENSION_ARGUMENTS=""
 DGB_POOL="hub.miningpoolhub.com"
 DGB_PORT="20527"
 DGB_WORKER="$WORKERNAME"
-DGB_STRATUM_SCHEMA="stratum+tcp"
+DGB_POOL_PROTOCOL="stratum+tcp"
 
 # Desire (DSR)
 DSR_ADDRESS="replace_with_your_address"
@@ -738,7 +738,7 @@ DSR_EXTENSION_ARGUMENTS=""
 DSR_POOL="DSR_POOL"
 DSR_PORT="DSR_PORT"
 DSR_WORKER="$WORKERNAME"
-DSR_STRATUM_SCHEMA="stratum+tcp"
+DSR_POOL_PROTOCOL="stratum+tcp"
 
 #Ellaism (ELLA)
 ELLA_ADDRESS="replace_with_your_address"
@@ -746,7 +746,7 @@ ELLA_EXTENSION_ARGUMENTS=""
 ELLA_POOL="replace_with_pool_address"
 ELLA_PORT="replace_with_pool_port"
 ELLA_WORKER="$WORKERNAME"
-ELLA_STRATUM_SCHEMA="stratum+tcp"
+ELLA_POOL_PROTOCOL="stratum+tcp"
 
 # Ethereum Classic (ETC)
 ETC_ADDRESS="replace_with_your_address"
@@ -754,7 +754,7 @@ ETC_EXTENSION_ARGUMENTS=""                               #claymore opts: "-allco
 ETC_POOL="europe.ethash-hub.miningpoolhub.com"
 ETC_PORT="20555"
 ETC_WORKER="$WORKERNAME"
-ETC_STRATUM_SCHEMA="stratum+tcp"
+ETC_POOL_PROTOCOL="stratum+tcp"
 
 # Ethereum (ETH)
 ETH_ADDRESS="replace_with_your_address"
@@ -762,7 +762,7 @@ ETH_EXTENSION_ARGUMENTS=""
 ETH_POOL="europe.ethash-hub.miningpoolhub.com"
 ETH_PORT="20535"
 ETH_WORKER="$WORKERNAME"
-ETH_STRATUM_SCHEMA="stratum+tcp"
+ETH_POOL_PROTOCOL="stratum+tcp"
 
 # Electroneum(ETN) 
 ETN_ADDRESS="replace_with_your_address"
@@ -770,7 +770,7 @@ ETN_EXTENSION_ARGUMENTS=""
 ETN_POOL="ETN POOL"
 ETN_PORT="ETN PORT"
 ETN_WORKER="$WORKERNAME"
-ETN_STRATUM_SCHEMA="stratum+tcp"
+ETN_POOL_PROTOCOL="stratum+tcp"
 
 # Metaverse (ETP)
 ETP_ADDRESS="replace_with_your_address"
@@ -778,7 +778,7 @@ ETP_EXTENSION_ARGUMENTS=""
 ETP_POOL="replace_with_your_ETP_POOL"
 ETP_PORT="replace_with_your_ETP_PORT"
 ETP_WORKER="$WORKERNAME"
-ETP_STRATUM_SCHEMA="stratum+tcp"
+ETP_POOL_PROTOCOL="stratum+tcp"
 
 # Expanse (EXP)
 EXP_ADDRESS="replace_with_your_address"
@@ -786,7 +786,7 @@ EXP_EXTENSION_ARGUMENTS=""
 EXP_POOL="exp-us.dwarfpool.com:"
 EXP_PORT="81"
 EXP_WORKER="$WORKERNAME"
-EXP_STRATUM_SCHEMA="stratum+tcp"
+EXP_POOL_PROTOCOL="stratum+tcp"
 
 # Folm (FLM)
 FLM_ADDRESS="replace_with_your_address"
@@ -794,7 +794,7 @@ FLM_EXTENSION_ARGUMENTS=""
 FLM_POOL="replace_with_your_FLM_POOL"
 FLM_PORT="replace_with_your_FLM_PORT"
 FLM_WORKER="$WORKERNAME"
-FLM_STRATUM_SCHEMA="stratum+tcp"
+FLM_POOL_PROTOCOL="stratum+tcp"
 
 # FeatherCoin (FTC)
 FTC_ADDRESS="replace_with_your_address"
@@ -802,7 +802,7 @@ FTC_EXTENSION_ARGUMENTS=""
 FTC_POOL="hub.miningpoolhub.com"
 FTC_PORT="20510"
 FTC_WORKER="$WORKERNAME"
-FTC_STRATUM_SCHEMA="stratum+tcp"
+FTC_POOL_PROTOCOL="stratum+tcp"
 
 # GoByte (GBX)
 GBX_ADDRESS="replace_with_your_address"
@@ -810,7 +810,7 @@ GBX_EXTENSION_ARGUMENTS=""
 GBX_POOL="replace_with_pool_address"
 GBX_PORT="replace_with_pool_port"
 GBX_WORKER="$WORKERNAME"
-GBX_STRATUM_SCHEMA="stratum+tcp"
+GBX_POOL_PROTOCOL="stratum+tcp"
 
 # Groestl (GRS)
 GRS_ADDRESS="replace_with_your_address"
@@ -818,7 +818,7 @@ GRS_EXTENSION_ARGUMENTS=""
 GRS_POOL="moria.dwarfpool.com"
 GRS_PORT="3345"
 GRS_WORKER="$WORKERNAME"
-GRS_STRATUM_SCHEMA="stratum+tcp"
+GRS_POOL_PROTOCOL="stratum+tcp"
 
 # Hush (HUSH)
 HUSH_ADDRESS="replace_with_your_address"
@@ -826,7 +826,7 @@ HUSH_EXTENSION_ARGUMENTS=""
 HUSH_POOL="zdash.suprnova.cc"
 HUSH_PORT="4048"
 HUSH_WORKER="$WORKERNAME"
-HUSH_STRATUM_SCHEMA="stratum+tcp"
+HUSH_POOL_PROTOCOL="stratum+tcp"
 
 # Komodo (KMD)
 KMD_ADDRESS="replace_with_your_address"
@@ -834,7 +834,7 @@ KMD_EXTENSION_ARGUMENTS=""
 KMD_POOL="luckpool.org"
 KMD_PORT="3857"
 KMD_WORKER="$WORKERNAME"
-KMD_STRATUM_SCHEMA="stratum+tcp"
+KMD_POOL_PROTOCOL="stratum+tcp"
 
 # Karbo (KRB)
 KRB_ADDRESS="replace_with_your_address"
@@ -842,7 +842,7 @@ KRB_EXTENSION_ARGUMENTS=""
 KRB_POOL="krb.sberex.com"
 KRB_PORT="5555"
 KRB_WORKER="$WORKERNAME"
-KRB_STRATUM_SCHEMA="stratum+tcp"
+KRB_POOL_PROTOCOL="stratum+tcp"
 
 # LBRY (LBC) 
 LBC_ADDRESS="replace_with_your_address"
@@ -850,7 +850,7 @@ LBC_EXTENSION_ARGUMENTS=""
 LBC_POOL="lbry.suprnova.cc"
 LBC_PORT="6256"
 LBC_WORKER="$WORKERNAME"
-LBC_STRATUM_SCHEMA="stratum+tcp"
+LBC_POOL_PROTOCOL="stratum+tcp"
 
 #Loki (LOKI)
 LOKI_ADDRESS="replace_with_your_address"
@@ -858,7 +858,7 @@ LOKI_EXTENSION_ARGUMENTS=""
 LOKI_POOL="LOKI_POOL"
 LOKI_PORT="LOKI_PORT"
 LOKI_WORKER="$WORKERNAME"
-LOKI_STRATUM_SCHEMA="stratum+tcp"
+LOKI_POOL_PROTOCOL="stratum+tcp"
 
 # Lux Coin (LUX)
 LUX_ADDRESS="replace_with_your_address"
@@ -866,7 +866,7 @@ LUX_EXTENSION_ARGUMENTS=""
 LUX_POOL="yiimp.eu"
 LUX_PORT="8333"
 LUX_WORKER="$WORKERNAME"
-LUX_STRATUM_SCHEMA="stratum+tcp"
+LUX_POOL_PROTOCOL="stratum+tcp"
 
 # Mona Coin (MONA)
 MONA_ADDRESS="replace_with_your_address"
@@ -874,7 +874,7 @@ MONA_EXTENSION_ARGUMENTS=""
 MONA_POOL="mona.suprnova.cc"
 MONA_PORT="2995"
 MONA_WORKER="$WORKERNAME"
-MONA_STRATUM_SCHEMA="stratum+tcp"
+MONA_POOL_PROTOCOL="stratum+tcp"
 
 # Music Coin (MUSIC)
 MUSIC_ADDRESS="replace_with_your_address"
@@ -882,14 +882,14 @@ MUSIC_EXTENSION_ARGUMENTS=""
 MUSIC_POOL="eus.gmc.epool.io"
 MUSIC_PORT="8008"
 MUSIC_WORKER="$WORKERNAME"
-MUSIC_STRATUM_SCHEMA="stratum+tcp"
+MUSIC_POOL_PROTOCOL="stratum+tcp"
 
 # DeepOnion (ONION)
 ONION_ADDRESS="replace_with_your_address"
 ONION_EXTENSION_ARGUMENTS=""
 ONION_POOL="kawaiipool.party"
 ONION_PORT="3633"
-ONION_STRATUM_SCHEMA="stratum+tcp"
+ONION_POOL_PROTOCOL="stratum+tcp"
 
 # Orbitcoin (ORB)
 ORB_ADDRESS="replace_with_your_address"
@@ -897,7 +897,7 @@ ORB_EXTENSION_ARGUMENTS=""
 ORB_POOL="strat.dnb.io"
 ORB_PORT="3031"
 ORB_WORKER="$WORKERNAME"
-ORB_STRATUM_SCHEMA="stratum+tcp"
+ORB_POOL_PROTOCOL="stratum+tcp"
 
 # Pascal Coin (PASC)
 PASC_ADDRESS="replace_with_your_address"
@@ -905,7 +905,7 @@ PASC_EXTENSION_ARGUMENTS=""
 PASC_POOL="pasc-us-east1.nanopool.org"
 PASC_PORT="15555"
 PASC_WORKER="$WORKERNAME"
-PASC_STRATUM_SCHEMA="stratum+tcp"
+PASC_POOL_PROTOCOL="stratum+tcp"
 
 # Pascal Lite (PASL)
 PASL_ADDRESS="replace_with_your_address"
@@ -913,7 +913,7 @@ PASL_EXTENSION_ARGUMENTS=""
 PASL_POOL="mine.pasl.fairpool.xyz"
 PASL_PORT="4009"
 PASL_WORKER="$WORKERNAME"
-PASL_STRATUM_SCHEMA="stratum+tcp"
+PASL_POOL_PROTOCOL="stratum+tcp"
 
 # Pirl Coin (PIRL)
 PIRL_ADDRESS="replace_with_your_address"
@@ -921,7 +921,7 @@ PIRL_EXTENSION_ARGUMENTS=""
 PIRL_POOL="PIRL POOL"
 PIRL_PORT="PIRL PORT"
 PIRL_WORKER="$WORKERNAME"
-PIRL_STRATUM_SCHEMA="stratum+tcp"
+PIRL_POOL_PROTOCOL="stratum+tcp"
 
 # Phoenixcoin (PXC)
 PXC_ADDRESS="replace_with_your_address"
@@ -929,7 +929,7 @@ PXC_EXTENSION_ARGUMENTS=""
 PXC_POOL="atlas.phoenixcoin.org:"
 PXC_PORT="10554"
 PXC_WORKER="$WORKERNAME"
-PXC_STRATUM_SCHEMA="stratum+tcp"
+PXC_POOL_PROTOCOL="stratum+tcp"
 
 # Raven Coin (RVN)
 RVN_ADDRESS="replace_with_your_address"
@@ -937,7 +937,7 @@ RVN_EXTENSION_ARGUMENTS=""
 RVN_POOL="RVN_POOL_ADDRESS"
 RVN_PORT="RVN_POOL_PORT"
 RVN_WORKER="$WORKERNAME"
-RVN_STRATUM_SCHEMA="stratum+tcp"
+RVN_POOL_PROTOCOL="stratum+tcp"
 
 # Siacoin (SC)
 SC_ADDRESS="replace_with_your_address"
@@ -947,7 +947,7 @@ SC_GW_PORT="9980"
 SC_POOL="sia-us-east1.nanopool.org"
 SC_PORT="7777"
 SC_WORKER="$WORKERNAME"
-SC_STRATUM_SCHEMA="stratum+tcp"
+SC_POOL_PROTOCOL="stratum+tcp"
 
 # Sib Coin (SIB)
 SIB_ADDRESS="replace_with_your_address"
@@ -955,7 +955,7 @@ SIB_EXTENSION_ARGUMENTS=""
 SIB_POOL="sib.suprnova.cc"
 SIB_PORT="3458"
 SIB_WORKER="$WORKERNAME"
-SIB_STRATUM_SCHEMA="stratum+tcp"
+SIB_POOL_PROTOCOL="stratum+tcp"
 
 # Signatum (SIGT)
 SIGT_ADDRESS="replace_with_your_address"
@@ -963,7 +963,7 @@ SIGT_EXTENSION_ARGUMENTS=""
 SIGT_POOL="us.hashbag.cc"
 SIGT_PORT="8644"
 SIGT_WORKER="$WORKERNAME"
-SIGT_STRATUM_SCHEMA="stratum+tcp"
+SIGT_POOL_PROTOCOL="stratum+tcp"
 
 # Smart Coin (SMART)
 SMART_ADDRESS="replace_with_your_address"
@@ -971,7 +971,7 @@ SMART_EXTENSION_ARGUMENTS=""
 SMART_POOL="pool-eu.smartcash.cc"
 SMART_PORT="3333"
 SMART_WORKER="$WORKERNAME"
-SMART_STRATUM_SCHEMA="stratum+tcp"
+SMART_POOL_PROTOCOL="stratum+tcp"
 
 # SOILcoin (SOIL)
 SOIL_ADDRESS="replace_with_your_address"
@@ -979,7 +979,7 @@ SOIL_EXTENSION_ARGUMENTS=""
 SOIL_POOL="soil.pool.sexy"
 SOIL_PORT="9009"
 SOIL_WORKER="$WORKERNAME"
-SOIL_STRATUM_SCHEMA="stratum+tcp"
+SOIL_POOL_PROTOCOL="stratum+tcp"
 
 # Sumokoin (SUMO)
 SUMO_ADDRESS="replace_with_your_address"
@@ -987,7 +987,7 @@ SUMO_EXTENSION_ARGUMENTS=""
 SUMO_POOL="SUMO_POOL"
 SUMO_PORT="SUMO_PORT"
 SUMO_WORKER="$WORKERNAME"
-SUMO_STRATUM_SCHEMA="stratum+tcp"
+SUMO_POOL_PROTOCOL="stratum+tcp"
 
 # TrezarCoin (TZC)
 TZC_ADDRESS="replace_with_your_address"
@@ -995,7 +995,7 @@ TZC_EXTENSION_ARGUMENTS=""
 TZC_POOL="TZC POOL"
 TZC_PORT="TZC PORT"
 TZC_WORKER="$WORKERNAME"
-TZC_STRATUM_SCHEMA="stratum+tcp"
+TZC_POOL_PROTOCOL="stratum+tcp"
 
 # Ubiq (UBQ)
 UBQ_ADDRESS="replace_with_your_address"
@@ -1003,7 +1003,7 @@ UBQ_EXTENSION_ARGUMENTS=""
 UBQ_POOL="us.ubiqpool.io"
 UBQ_PORT="8008"
 UBQ_WORKER="$WORKERNAME"
-UBQ_STRATUM_SCHEMA="stratum+tcp"
+UBQ_POOL_PROTOCOL="stratum+tcp"
 
 # VIVO (VIVO)
 VIVO_ADDRESS="replace_with_your_address"
@@ -1011,7 +1011,7 @@ VIVO_EXTENSION_ARGUMENTS=""
 VIVO_POOL="VIVO POOL"
 VIVO_PORT="VIVO PORT"
 VIVO_WORKER="$WORKERNAME"
-VIVO_STRATUM_SCHEMA="stratum+tcp"
+VIVO_POOL_PROTOCOL="stratum+tcp"
 
 # Vertcoin (VTC)
 VTC_ADDRESS="replace_with_your_address"
@@ -1019,7 +1019,7 @@ VTC_EXTENSION_ARGUMENTS=""
 VTC_POOL="hub.miningpoolhub.com"
 VTC_PORT="20507"
 VTC_WORKER="$WORKERNAME"
-VTC_STRATUM_SCHEMA="stratum+tcp"
+VTC_POOL_PROTOCOL="stratum+tcp"
 
 # Motion (XMN)
 XMN_ADDRESS="replace_with_your_address"
@@ -1027,7 +1027,7 @@ XMN_EXTENSION_ARGUMENTS=""
 XMN_POOL="XMN_POOL_ADDRESS"
 XMN_PORT="XMN_POOL_PORT"
 XMN_WORKER="$WORKERNAME"
-XMN_STRATUM_SCHEMA="stratum+tcp"
+XMN_POOL_PROTOCOL="stratum+tcp"
 
 # Monero (XMR)
 XMR_ADDRESS="replace_with_your_address"
@@ -1035,7 +1035,7 @@ XMR_EXTENSION_ARGUMENTS=""
 XMR_POOL="xmr-us-east1.nanopool.org"
 XMR_PORT="14444"
 XMR_WORKER="$WORKERNAME"
-XMR_STRATUM_SCHEMA="stratum+tcp"
+XMR_POOL_PROTOCOL="stratum+tcp"
 
 # Myriad (XMY)
 XMY_ADDRESS="replace_with_your_address"
@@ -1043,7 +1043,7 @@ XMY_EXTENSION_ARGUMENTS=""
 XMY_POOL="us-east1.myriadcoin-groestl.miningpoolhub.com"
 XMY_PORT="20479"
 XMY_WORKER="$WORKERNAME"
-XMY_STRATUM_SCHEMA="stratum+tcp"
+XMY_POOL_PROTOCOL="stratum+tcp"
 
 # Verge (XVG)
 XVG_ADDRESS="replace_with_your_address"
@@ -1051,7 +1051,7 @@ XVG_EXTENSION_ARGUMENTS=""
 XVG_POOL="replace_with_pool_address"
 XVG_PORT="replace_with_pool_port"
 XVG_WORKER="$WORKERNAME"
-XVG_STRATUM_SCHEMA="stratum+tcp"
+XVG_POOL_PROTOCOL="stratum+tcp"
 
 # ZCoin (XZC)
 XZC_ADDRESS="replace_with_your_address"
@@ -1059,7 +1059,7 @@ XZC_EXTENSION_ARGUMENTS=""
 XZC_POOL="xzc.suprnova.cc"
 XZC_PORT="1569"
 XZC_WORKER="$WORKERNAME"
-XZC_STRATUM_SCHEMA="stratum+tcp"
+XZC_POOL_PROTOCOL="stratum+tcp"
 
 # ZClassic (ZCL)
 ZCL_ADDRESS="replace_with_your_address"
@@ -1067,7 +1067,7 @@ ZCL_EXTENSION_ARGUMENTS=""
 ZCL_POOL="us.zclmine.pro"
 ZCL_PORT="9009"
 ZCL_WORKER="$WORKERNAME"
-ZCL_STRATUM_SCHEMA="stratum+tcp"
+ZCL_POOL_PROTOCOL="stratum+tcp"
 
 # Zcash (ZEC)
 ZEC_ADDRESS="t1XfkZUZWME8FnRiFxHZQAQ2K1UdQMbshJp" # replace_with_your_address
@@ -1075,7 +1075,7 @@ ZEC_EXTENSION_ARGUMENTS=""
 ZEC_POOL="zec-us-east1.nanopool.org"
 ZEC_PORT="6666"
 ZEC_WORKER="$WORKERNAME"
-ZEC_STRATUM_SCHEMA="stratum+tcp"
+ZEC_POOL_PROTOCOL="stratum+tcp"
 
 # Zencash (ZEN)
 ZEN_ADDRESS="replace_with_your_address"
@@ -1083,7 +1083,7 @@ ZEN_EXTENSION_ARGUMENTS=""
 ZEN_POOL="luckpool.org"
 ZEN_PORT="3057"
 ZEN_WORKER="$WORKERNAME"
-ZEN_STRATUM_SCHEMA="stratum+tcp"
+ZEN_POOL_PROTOCOL="stratum+tcp"
 
 # plusCPU (defaults: same as XMR)
 plusCPU_ADDRESS="$XMR_ADDRESS"
