--- a/1bash.template
+++ b/1bash.template
@@ -624,8 +624,8 @@ Z_EWBF_OPTS=""                                   # EWBF ZHASH Miner optional arg
 Z_EWBF_VERSION="latest"                          # EWBF ZHASH Miner version,  "latest" or add the version you installed 
 
 BMINER_OPTS=""                                   # Bminer optional arguments. add "--api $IPW:42000" if you want web info
-BMINER_PROTOCOL="stratum"                        # Choose for equihash and ethahsh mining protocols:
-                                                 
+#BMINER_PROTOCOL, Deprecated, use COIN_POOL_PROTOCOL
+
 CCMINER_OPTS=""                                  # ccminer optional arguments. Add "-b 0.0.0.0:4028", or "-b $IPW:42000" if you want web info (first one allows remote monitoring by default)
 
 
