--- a/1bash.template
+++ b/1bash.template
@@ -450,7 +450,7 @@ MINER_PWD="x"                                    # Set the miner password. Defau
 #        Various algos:
 #          "ANXccminer", "ASccminer", "CryptoDredge", "KTccminer",  
 #          "KXccminer", "SILENTminer", "SPccminer",  "SUPRminer",   
-#          "TPccminer", "vertminer", "xmr-stak", "ZENEMYminer"
+#          "TPccminer", "VERTMINER", "XMR_Stak", "ZENEMYminer"
 #        Equihash:
 #          "DSTM", "EWBF", "BMINER"
 #        Zhash:
@@ -471,12 +471,12 @@ CRYPTONIGHT_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 
 ## CRYPTONIGHT-V7
 CRYPTONIGHTV7_INTENSITY="0"
-CRYPTONIGHTV7_MINER="xmr-stak"
+CRYPTONIGHTV7_MINER="XMR_Stak"
 CRYPTONIGHTV7_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 
 ## CRYPTONIGHTHEAVY
 CRYPTONIGHTHEAVY_INTENSITY="0"
-CRYPTONIGHTHEAVY_MINER="xmr-stak"
+CRYPTONIGHTHEAVY_MINER="XMR_Stak"
 CRYPTONIGHTHEAVY_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 
 ## Decred
@@ -508,8 +508,8 @@ LBRY_MINER="SPccminer"
 LBRY_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 
 ## LYRA2REV2
-LYRA2V2_INTENSITY="0"
-LYRA2V2_MINER="TPccminer"
+LYRA2V2_INTENSITY="1"
+LYRA2V2_MINER="CryptoDredge"
 LYRA2V2_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 
 ## LYRA2Z
@@ -523,8 +523,8 @@ MYR_GR_MINER="TPccminer"
 MYR_GR_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 
 ## Neoscrypt
-NEOSCRYPT_INTENSITY="0"
-NEOSCRYPT_MINER="KTccminer"
+NEOSCRYPT_INTENSITY="1"
+NEOSCRYPT_MINER="CryptoDredge"
 NEOSCRYPT_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 
 ## PASCAL
