--- a/1bash.template
+++ b/1bash.template
@@ -113,7 +113,7 @@ v0034="LuKePicci;Rearrange settings and explaination comments"
 v0035="LuKePicci;Uniform plusCPU handling"
 v0036="papampi;Ethminer new arguments, Coin Pool Protocol"
 v0037="papampi;Added bminer scheme info for zhash & tensority based coins"
-v0038="Spiral;Added max temperature shutdown option & resolution option for teamviewer
+v0038="Spiral;Added max temperature shutdown option & resolution option for teamviewer"
 
 # Do not edit these lines
 nvOC_Ver="v0019-2.1" 
