HEX ALGO SPECIFIC

--- a/1bash.template
+++ b/1bash.template
@@ -1524,6 +1524,11 @@ ETHASH_POWERLIMIT_WATTS=100              # Recommended value for some GTX-1060: 
 ETHASH_CORE_OVERCLOCK=0                  # Recommended value for some GTX-1060: 100
 ETHASH_MEMORY_OVERCLOCK=0                # Recommended value for some GTX-1060: 1600
 
+# HEX
+HEX_POWERLIMIT_WATTS="100" 
+HEX_CORE_OVERCLOCK="0" 
+HEX_MEMORY_OVERCLOCK="0" 
+
 # lyra2v2, Lyura2Rev2
 LYRA2V2_POWERLIMIT_WATTS=100             # Recommended value for some GTX-1060: 65
 LYRA2V2_CORE_OVERCLOCK=0                 # Recommended value for some GTX-1060: 160
